updated links and about section

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Emira Hajj</title>
+    <title>Emira Shano</title>
   </head>
   <body class="mt-0"
   width="100%"
