--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   width="100%"
   height="100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-gradient-to-r from-green-300 to-blue-400"></div>
+    <div id="root" class=""></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
